refactor: change img path

--- a/_posts/2016-9-7-cookie.md
+++ b/_posts/2016-9-7-cookie.md
@@ -48,7 +48,7 @@ Other-header: other-header-value
 
 ### 3.1 cookie的运作过程
 
-![cookie运作过程]({{ site.baseurl }}/img/cookie/cookie-run.png)
+![cookie运作过程]({{ site.baseurl }}/assets/img/cookie/cookie-run.png)
 
 ### 3.2 JavaScript的cookie
 
