feat: update demo

--- a/_posts/2018-8-20-es5-key.md
+++ b/_posts/2018-8-20-es5-key.md
@@ -1,10 +1,10 @@
 ---
-title: JavaScript 要点
+title: 认识 JavaScript
 ---
 
-ECMAScript 是“伪语言”，而 JavaScript 是对 ECMAScript 的一个实现。
+学习 JavaScript 我们多会听到另一个词 ECMAScript，它和 JavaScript 的关系是，ECMAScript 是“伪语言”，而 JavaScript 是对 ECMAScript 的一个实现。
 
-JavaScript 有如下特点：
+## 几个特点
 
 1. 函数优先：由于编译器的作用，函数声明和变量声明都会被提升，但函数会首先被提升，然后才是变量。
 2. 轻量级解释型或即时编译型：即 JavaScript 不能被机器直接执行，需要解释或编译为机器语言。
@@ -13,7 +13,9 @@ JavaScript 有如下特点：
 5. 多范式：支持面向对象、命令式和函数式。
 6. 动态脚本语言：新的函数可以被引进，已有的函数可以被删除，类型在运行时检查。
 
-接下来说说 JavaScript 的要点，以下是从红宝书总结而来的：
+## 知识点
+
+接下来说说 JavaScript 的知识点，以下是从红宝书总结而来的：
 
 1. 在 HTML 中使用 JavaScript：当初开发 JavaScript 的时候，有一个重要问题就是如何做到让 JavaScript 既能与 HTML 页面共存，又不影响那些页面在其他浏览器中的呈现效果。最终的决定是为 Web 增加统一的脚本支持。
 2. 基本概念：​​​​​任何语言的核心都必然会描述这门语言最基本的工作原理。而描述的内容通常都要涉及这门语言的语法、操作符、数据类型、内置功能等用于构建复杂解决方案的基本概念。
@@ -39,6 +41,8 @@ JavaScript 有如下特点：
 22. 离线应用与客户端存储：所谓离线 Web 应用，就是在设备不能上网的情况下仍然可以运行的应用。​​​​​开发离线 Web 应用需要几个步骤。首先是确保应用知道设备是否能上网，以便下一步执行正确的操作。然后，应用还必须能访问一定的资源（图像、JavaScript、CSS等），只有这样才能正常工作。最后，必须有一块本地空间用于保存数据，无论能否上网都不妨碍读写。
 23. 最佳实践：Web 开发从过去还都凑合的现象演化成了完整的研究规范。规范包括可维护性、性能和部署。
 24. 新兴的 API：包括 requestAnimationFrame、Page Visibility API、Geolocation API、File API、Web 计时、Web Workers。这些 API 没有包含在 HTML 5 中，但是属于 HTML 5 相关的 API。
+
+## 学习笔记
 
 另外博主还做了关于这本书的一些知识笔记，这些笔记是博主大概两年前阅读红宝书时整理的，基本都是思维导图，一直放在个人笔记里。现在将它们整理放到博客里，便于分享：
 
