--- a/src/content/blog/2017-8-29-bfc.md
+++ b/src/content/blog/2017-8-29-bfc.md
@@ -2,7 +2,7 @@
 title: BFC 的简单理解
 description: "BFC 的简单理解..."
 date: 2017-08-29
-tags: ["javascript"]
+category: [javascript]
 ---
 
 BFC 的扩写是 Block formatting contexts （块级格式化上下文），它看不见摸不着但对 CSS 盒模型有影响。  
