--- a/src/content/blog/2018-8-20-es5-key.md
+++ b/src/content/blog/2018-8-20-es5-key.md
@@ -2,7 +2,7 @@
 title: 认识 JavaScript
 description: "认识 JavaScript..."
 date: 2018-08-20
-tags: ["javascript"]
+category: [javascript]
 ---
 
 这篇博文是关于《JavaScript高级程序设计（第3版）》（经典的红宝书）的读书笔记。
